# api

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
app/: config.py  dependencies.py  main.py  middleware.py  models.py  redis_client.py  schemas.py  security.py  utils.py  valkey_client.py
app/routers/: admin.py  auth.py  favorites.py  file.py  movies.py  ranking.py  reviews.py  user.py
app/services/: email_verification_service.py  rate_limit_service.py  token_service.py
app/templates/: email_verification.html
scripts/: init_db.py  make_user.py  seed_data.py  test_s3_connection.py
